--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <b>1</b><span>선택  </span>
                 </div>
                 <div><a href="#">검색   </a></div>
+            </div>
         </div>
     </main>
    
